--- a/app/src/main/res/layout/timetable_main.xml
+++ b/app/src/main/res/layout/timetable_main.xml
@@ -4,11 +4,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+    <!--
+        This is going to be the start of the grid of the weekly and daily view
+    -->
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </LinearLayout>
+    </RelativeLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="Timetable Page"
-        android:textSize="30sp"
-        android:layout_centerInParent="true"/>
+        android:textSize="30sp" />
 
 </RelativeLayout>
