--- a/app/src/main/res/layout/account_details.xml
+++ b/app/src/main/res/layout/account_details.xml
@@ -1,60 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Account">
 
-    <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:visibility="visible"
-        android:contentDescription="Profile Image" />
-
-    <TextView
-        android:id="@+id/profile_text"
+    <LinearLayout
+        android:id="@+id/user_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/profile_image"
+        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:layout_marginBottom="10dp"
-        android:textSize="16sp"
-        tools:text="Irshad Kumail" />
+        android:minWidth="300dp"
+        android:orientation="vertical"
+        android:visibility="invisible">
 
-    <TextView
-        android:id="@+id/profile_email"
+        <TextView
+            android:id="@+id/profile_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            tools:text="Profile Text" />
+
+        <TextView
+            android:id="@+id/profile_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            tools:text="userEmail" />
+
+        <Button
+            android:id="@+id/sign_out_button"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:text="SIGN OUT" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/sign_in_form"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/profile_text"
+        android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
-        android:layout_marginBottom="10dp"
-        android:textSize="14sp"
-        tools:text="userEmail" />
+        android:minWidth="300dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/sign_out_button"
-        android:layout_below="@id/profile_email"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="56dp"
-        android:text="SIGN OUT" />
+        <EditText
+            android:id="@+id/input_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="Email">
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/profile_email"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="69dp"
-        android:layout_marginBottom="36dp" />
+            <requestFocus />
+        </EditText>
+
+        <EditText
+            android:id="@+id/input_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Password"></EditText>
+
+        <TextView
+            android:id="@+id/sign_in_error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            tools:text="" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="300dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/sign_in_button"
+                android:layout_width="140dp"
+                android:minHeight="57dp"
+                android:layout_height="wrap_content"
+                android:text="Sign In" />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/google_sign_in_button"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
