--- a/app/src/main/res/layout/group_page.xml
+++ b/app/src/main/res/layout/group_page.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="90dp"
+    tools:context="aut.groupsync.Group">
 
-    <TextView
+    <Button
+        android:id="@+id/addGroupBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Groups Page"
-        android:textSize="30sp" />
+        android:layout_centerHorizontal="true"
+        android:text="Create New Group"
+        android:textSize="25sp" />
+
 
 </RelativeLayout>
