Implemented "Add Appointment" functionality to timetables. Working on implementing support for groups.

--- a/app/src/main/res/layout/add_group_popup.xml
+++ b/app/src/main/res/layout/add_group_popup.xml
@@ -15,14 +15,14 @@
         android:text="Group Name" />
 
 
-
     <EditText
+        android:id="@+id/groupNameEditTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
         android:background="#fff"
         android:hint="Name"
-        android:id="@+id/groupNameEditTxt"/>
+        android:inputType="textShortMessage"
+        android:padding="5dp" />
 
     <Button
         android:layout_width="wrap_content"
