Separated Account into AccountView and User classes to keep UI separate. Separated Group and GroupView to keep class and UI separate. Made updates to Account and Group classes.

--- a/app/src/main/res/layout/group_page.xml
+++ b/app/src/main/res/layout/group_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingTop="90dp"
-    tools:context="aut.groupsync.Group">
+    tools:context="aut.groupsync.GroupView">
 
     <Button
         android:id="@+id/addGroupBtn"
