--- a/app/src/main/res/layout/invite_group_popup.xml
+++ b/app/src/main/res/layout/invite_group_popup.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center"
-    android:layout_margin="20dp"
     android:padding="20dp"
     android:background="#000"
     android:id="@+id/inviteGroupPopupLayout">
@@ -17,7 +16,7 @@
 
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:background="#fff"
